--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ jobs:
     - script: echo this is version $(MyVersion)
       name: echovar    
 
-- job: DownloadFiles
+- job: DownloadFilesAndModifyBackend
 
   dependsOn: SetProps
   condition: true
@@ -108,7 +108,7 @@ jobs:
 - job: BuildFrontEnd
   dependsOn: 
   - SetProps
-  - DownloadFiles
+  - DownloadFilesAndModifyBackend
   pool:
     vmImage: 'vs2017-win2016'
 
@@ -169,7 +169,7 @@ jobs:
 - job: Windows
   dependsOn: 
   - SetProps
-  - DownloadFiles
+  - BuildFrontEnd
   condition: eq(variables['deployWindows'],1)
   pool:
     vmImage: 'vs2017-win2016'
@@ -239,7 +239,7 @@ jobs:
 - job: Linux
   dependsOn: 
   - SetProps
-  - DownloadFiles
+  - BuildFrontEnd
   condition: eq(variables['deployLinux'],1)
   pool:
     vmImage: 'ubuntu-16.04'
