--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -231,14 +231,15 @@ jobs:
     displayName: install global tools
 
   - script: |
-        cd stankinsv2/solution/StankinsV2/StankinsStatusWeb
-        dotnet-thx.exe
-        cd ../StankinsTestXUnit
-        dotnet test  $(buildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=opencover 
+        rem cd stankinsv2/solution/StankinsV2/StankinsStatusWeb
+        rem dotnet-thx.exe
+        rem cd ../StankinsTestXUnit
+        dotnet test  $(buildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=opencover stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
         reportgenerator "-reports:coverage.opencover.xml" "-targetdir:coveragereport" -reporttypes:HTMLInline;HTMLSummary;Badges
         xcopy coveragereport  $(Build.ArtifactStagingDirectory)\cc\ /S  
         rem restoring current dir
-        cd ../../../../ 
+        rem cd ../../../../ 
+        dir 
     displayName: test dot net
   - script: |
         echo start publish windows
