--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -257,6 +257,13 @@ jobs:
         rem cd ../../../../ 
         dir 
     displayName: test dot net
+  
+  - bash: |
+      curl -s https://codecov.io/bash > codecov
+      chmod +x codecov
+      ./codecov -f "coverage.opencover.xml" -t $CODECOV_TOKEN
+    displayName: upload  code coverage
+
   - script: |
         echo start publish windows
         dotnet publish -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.1 -c Release -r win10-x64 stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj
@@ -426,7 +433,7 @@ jobs:
     - script: |
        dir
        move drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
-       displayName: 'moving file artifact'
+      
 
     - task: ExtractFiles@1
       displayName: 'Extract zip files'
