--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ variables:
     month: $(Date:MM)
     day: $(Date:dd)
     uk: $(Date:yyyyMMdd)
-    deployWindows: 1
-    deployLinux: 1
+    deployWindows: 0
+    deployLinux: 0
 
 name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 
@@ -22,7 +22,7 @@ jobs:
 - job: SetProps
   pool:
     vmImage: 'vs2017-win2016'
-  condition: true
+  condition: false
   steps:
     - checkout: none #skip checking out the default repository resource
     - powershell: |
@@ -55,7 +55,7 @@ jobs:
 - job: TestMyProps
 
   dependsOn: SetProps
-  condition: true
+  condition: false
 
   pool:
     vmImage: 'vs2017-win2016'
@@ -72,7 +72,7 @@ jobs:
 - job: DownloadFilesAndModifyBackend
 
   dependsOn: SetProps
-  condition: true
+  condition: false
 
   pool:
     vmImage: 'vs2017-win2016'
@@ -415,32 +415,32 @@ jobs:
 
 - job: DeployOnAzure
 
-  dependsOn: Windows
-  condition: succeeded('Windows')
+  #dependsOn: Windows
+  #condition: succeeded('Windows')
 
   pool:
     vmImage: 'vs2017-win2016'
  
   steps:
-    - checkout: none #skip checking out the default repository resource
-    - task: DownloadBuildArtifacts@0
-      displayName: 'Download Build Artifacts'
-      inputs:
-        artifactName: drop
-        downloadPath: $(Build.SourcesDirectory)
+  #  - checkout: none #skip checking out the default repository resource
+  #  - task: DownloadBuildArtifacts@0
+  #    displayName: 'Download Build Artifacts'
+  #   inputs:
+  #      artifactName: drop
+  #      downloadPath: $(Build.SourcesDirectory)
         #downloadPath: $(Agent.BuildDirectory)
 
-    - script: |
-       dir
-       move drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
+  #  - script: |
+  #     dir
+  #     move drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
       
 
-    - task: ExtractFiles@1
-      displayName: 'Extract zip files'
-      inputs:
-        archiveFilePatterns: '*.zip' 
-        destinationFolder: $(Build.SourcesDirectory)
-        cleanDestinationFolder: false 
+  #  - task: ExtractFiles@1
+  #    displayName: 'Extract zip files'
+  #    inputs:
+  #      archiveFilePatterns: '*.zip' 
+  #      destinationFolder: $(Build.SourcesDirectory)
+  #      cleanDestinationFolder: false 
 
     - task: DotNetCoreCLI@2
       displayName: 'build again'
