--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ variables:
     month: $(Date:MM)
     day: $(Date:dd)
     uk: $(Date:yyyyMMdd)
-    deployWindows: 0
-    deployLinux: 0
+    deployWindows: 1
+    deployLinux: 1
 
 name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 
@@ -417,32 +417,31 @@ jobs:
 
 - job: DeployOnAzure
 
-  #dependsOn: Windows
-  #condition: succeeded('Windows')
+  dependsOn: Windows
+  condition: succeeded('Windows')
 
   pool:
     vmImage: 'vs2017-win2016'
  
   steps:
-  #  - checkout: none #skip checking out the default repository resource
-  #  - task: DownloadBuildArtifacts@0
-  #    displayName: 'Download Build Artifacts'
-  #   inputs:
-  #      artifactName: drop
-  #      downloadPath: $(Build.SourcesDirectory)
-        #downloadPath: $(Agent.BuildDirectory)
-
-  #  - script: |
-  #     dir
-  #     move drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
+    - checkout: none #skip checking out the default repository resource
+    - task: DownloadBuildArtifacts@0
+      displayName: 'Download Build Artifacts'
+     inputs:
+        artifactName: drop
+        downloadPath: $(Build.SourcesDirectory)
+  
+    - script: |
+       dir
+       move drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
       
 
-  #  - task: ExtractFiles@1
-  #    displayName: 'Extract zip files'
-  #    inputs:
-  #      archiveFilePatterns: '*.zip' 
-  #      destinationFolder: $(Build.SourcesDirectory)
-  #      cleanDestinationFolder: false 
+    - task: ExtractFiles@1
+      displayName: 'Extract zip files'
+      inputs:
+        archiveFilePatterns: '*.zip' 
+        destinationFolder: $(Build.SourcesDirectory)
+        cleanDestinationFolder: false 
         
         
     - script: |
