--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ jobs:
 - job: SetProps
   pool:
     vmImage: 'vs2017-win2016'
-  condition: false
+  condition: true
   steps:
     - checkout: none #skip checking out the default repository resource
     - powershell: |
@@ -55,7 +55,7 @@ jobs:
 - job: TestMyProps
 
   dependsOn: SetProps
-  condition: false
+  condition: true
 
   pool:
     vmImage: 'vs2017-win2016'
@@ -72,7 +72,7 @@ jobs:
 - job: DownloadFilesAndModifyBackend
 
   dependsOn: SetProps
-  condition: false
+  condition: true
 
   pool:
     vmImage: 'vs2017-win2016'
