--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -469,3 +469,5 @@ jobs:
         azureSubscription: 'azurestankins'
         WebAppName: 'azurestankins'
         Package: $(System.ArtifactsDirectory)/*StankinsStatusWeb*.zip
+        DeployToSlotFlag: true
+        SlotName: staging
