--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -462,12 +462,26 @@ jobs:
     - script: |
        dir $(System.ArtifactsDirectory)\*.zip /s /b
       displayName: finding zip after Publish
+# Azure App Service Manage
+# Start, Stop, Restart, Slot swap, Install site extensions or Enable Continuous Monitoring for an Azure App Service
 
+    - task: AzureAppServiceManage@0
+      inputs:
+        azureSubscriptionazureSubscription: 'azurestankins'
+        WebAppName: 'azurestankins'
+        action: 'stop Azure App Service'
   
     - task: AzureRmWebAppDeployment@3
       inputs:
         azureSubscription: 'azurestankins'
         WebAppName: 'azurestankins'
         Package: $(System.ArtifactsDirectory)/*StankinsStatusWeb*.zip
-        DeployToSlotFlag: true
-        SlotName: staging
+        #DeployToSlotFlag: true
+        #SlotName: staging
+
+    - task: AzureAppServiceManage@0
+      inputs:
+        azureSubscriptionazureSubscription: 'azurestankins'
+        WebAppName: 'azurestankins'
+        action: 'start Azure App Service'
+  
