change staging with prod

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -482,6 +482,12 @@ jobs:
         SlotName: staging
         ResourceGroupName: 'stankins'
 
+    - task: AzureAppServiceManage@0
+      inputs:
+        azureSubscription: 'azurestankins'
+        WebAppName: 'azurestankins'
+        ResourceGroupName: 'stankins'
+        SourceSlot: staging
     #- task: AzureAppServiceManage@0
     #  inputs:
     #    azureSubscriptionazureSubscription: 'azurestankins'
