--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -444,16 +444,6 @@ jobs:
     #    archiveFilePatterns: '*.zip' 
     #    destinationFolder: $(Build.SourcesDirectory)
     #    cleanDestinationFolder: false 
-         
-    - task: AzureAppServiceManage@0
-      inputs:
-        #ConnectedServiceName: "azurestankins"
-        azureSubscription: 'azurestankins'
-        action: 'Stop Azure App Service'
-        WebAppName: 'azurestankins'
-        SlotName: staging
-        SpecifySlot: 'true'
-        ResourceGroupName: 'stankins'
         
     - script: |
        dir
@@ -473,33 +463,28 @@ jobs:
     - script: |
        dir $(System.ArtifactsDirectory)\*.zip /s /b
       displayName: finding zip after Publish
-# Azure App Service Manage
-# Start, Stop, Restart, Slot swap, Install site extensions or Enable Continuous Monitoring for an Azure App Service
 
-    #- task: AzureAppServiceManage@0
-    #  inputs:
-    #    azureSubscriptionazureSubscription: 'azurestankins'
-    #    WebAppName: 'azurestankins'
-    #    action: 'stop Azure App Service'
+         
+    - task: AzureAppServiceManage@0
+      inputs:
+        #ConnectedServiceName: "azurestankins"
+        azureSubscription: 'azurestankins'
+        action: 'Stop Azure App Service'
+        WebAppName: 'azurestankins'
+        ResourceGroupName: 'stankins'
   
     - task: AzureRmWebAppDeployment@3
       inputs:
         azureSubscription: 'azurestankins'
         WebAppName: 'azurestankins'
         Package: $(System.ArtifactsDirectory)/*StankinsStatusWeb*.zip
-        DeployToSlotFlag: true
-        SlotName: staging
         ResourceGroupName: 'stankins'
-
+               
     - task: AzureAppServiceManage@0
       inputs:
+        #ConnectedServiceName: "azurestankins"
         azureSubscription: 'azurestankins'
+        action: 'Start Azure App Service'
         WebAppName: 'azurestankins'
         ResourceGroupName: 'stankins'
-        SourceSlot: staging
-    #- task: AzureAppServiceManage@0
-    #  inputs:
-    #    azureSubscriptionazureSubscription: 'azurestankins'
-    #    WebAppName: 'azurestankins'
-    #    action: 'start Azure App Service'
   
