--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,9 +12,9 @@ variables:
     month: $(Date:MM)
     day: $(Date:dd)
     uk: $(Date:yyyyMMdd)
-    deployWindows: 0
-    deployLinux: 0
-    stop : 1
+    deployWindows: 1
+    deployLinux: 1
+    stop : 0
     
 
 name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
@@ -426,24 +426,24 @@ jobs:
     vmImage: 'vs2017-win2016'
  
   steps:
-    #- checkout: none #skip checking out the default repository resource
-    #- task: DownloadBuildArtifacts@0
-    #  displayName: 'Download Build Artifacts'
-    #  inputs:
-    #    artifactName: drop
-    #    downloadPath: $(Build.SourcesDirectory)
+    - checkout: none #skip checking out the default repository resource
+    - task: DownloadBuildArtifacts@0
+      displayName: 'Download Build Artifacts'
+      inputs:
+        artifactName: drop
+        downloadPath: $(Build.SourcesDirectory)
   
-    #- script: |
-    #   dir
-    #   move drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
-    #  
+    - script: |
+       dir
+       move drop\files-$(Build.BuildId).zip files-$(Build.BuildId).zip 
+      
 
-    #- task: ExtractFiles@1
-    #  displayName: 'Extract zip files'
-    #  inputs:
-    #    archiveFilePatterns: '*.zip' 
-    #    destinationFolder: $(Build.SourcesDirectory)
-    #    cleanDestinationFolder: false 
+    - task: ExtractFiles@1
+      displayName: 'Extract zip files'
+      inputs:
+        archiveFilePatterns: '*.zip' 
+        destinationFolder: $(Build.SourcesDirectory)
+        cleanDestinationFolder: false 
         
     - script: |
        dir
@@ -467,7 +467,6 @@ jobs:
          
     - task: AzureAppServiceManage@0
       inputs:
-        #ConnectedServiceName: "azurestankins"
         azureSubscription: 'azurestankins'
         action: 'Stop Azure App Service'
         WebAppName: 'azurestankins'
@@ -482,7 +481,6 @@ jobs:
                
     - task: AzureAppServiceManage@0
       inputs:
-        #ConnectedServiceName: "azurestankins"
         azureSubscription: 'azurestankins'
         action: 'Start Azure App Service'
         WebAppName: 'azurestankins'
