forget depends windows

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -419,8 +419,8 @@ jobs:
 
 - job: DeployOnAzure
 
-  #dependsOn: Windows
-  #condition: succeeded('Windows')
+  dependsOn: Windows
+  condition: succeeded('Windows')
 
   pool:
     vmImage: 'vs2017-win2016'
