--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj
@@ -24,11 +24,12 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="NSwag.AspNetCore" Version="12.0.9" />
     <!--
 <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
 -->
     <PackageReference Include="System.Reactive" Version="4.1.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"  Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
