now with angular versions

--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/angular.json
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/angular.json
@@ -20,6 +20,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+			  "src/npm-shrinkwrap.json",
               "src/assets"
             ],
             "styles": [
@@ -86,6 +87,7 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
+			   "src/npm-shrinkwrap.json",
               "src/assets"
             ]
           }
