--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -148,8 +148,10 @@ jobs:
        echo before install angular
        rem https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/package/npm?view=vsts
        call npm install -g @angular/cli
+       echo before json call
        call npm install -g json
-       json -I -f npm-shrinkwrap.json -e "this.version='%MyVersion%'"
+       echo install json
+       call json -I -f npm-shrinkwrap.json -e "this.version='%MyVersion%'"
        echo before npm
        call npm i
        echo before build
