--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -153,7 +153,7 @@ jobs:
        echo before json call with %MyVersion%
        call json -I -f npm-shrinkwrap.json -e "this.version='%MyVersion%'"
        call json -I -f package.json -e "this.version='%MyVersion%'"
-       type npm-shrinkwrap.json
+       rem type npm-shrinkwrap.json
        echo before npm
        call npm i
        echo before build
@@ -164,7 +164,7 @@ jobs:
 
   - script: |
        dir
-       npm install -g q
+       call npm install -g q
        call npm install -g cordova
        cd stankinsv2\solution\StankinsV2\StankinsCordova
        echo requirements
